# dreammanor-fastapi-quasar

./: .env  .gitignore  docker-compose.traefik.yml  docker-compose.yml
apps/backend/api/: .env  Dockerfile  alembic.ini  gunicorn_conf.py  pyproject.toml
apps/backend/api/app/: main.py
apps/backend/api/app/core/: __init__.py  config.py  index.md  logger.py
apps/backend/api/app/core/database/: _database.py  base_repository.py  database.py
apps/backend/api/app/modules/: __init__.py  routers.py
apps/backend/api/app/modules/real_estate/parsing/: models.py  repository.py  routers.py  schemas.py
apps/backend/api/app/modules/real_estate/parsing/utils/: process.py  web_driver_current.py
apps/backend/api/app/tasks/: celery.py  tasks.py
apps/backend/api/docker/: app.sh  celery.sh
apps/backend/api/migrations/: env.py
apps/backend/api/migrations/versions/: 2024_03_22_1530-627a2c64925e_update.py
apps/frontend/dreammanor-fastapi-quasar/: README.md  package-lock.json  package.json  quasar.config.js
